--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/public/css/customers
+/public/js/customers
+/public/images
+/resources/assets
+/node_modules
+/public/fonts
+/.framgia-ci-reports
+package-lock.json
+
