--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+/public/js/
+/public/css/
+/public/images
+/node_module
 /public/css/customers
 /public/js/customers
 /node_modules
@@ -18,3 +22,4 @@ yarn-error.log
 package-lock.json
 /public/library
 /resources/assets
+
