--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
+    "Ionicons": "ionicons#^2.0.1",
+    "bower_9": "https://github.com/lvgvictory/bower_9.git",
     "bootstrap": "^4.0.0",
     "Font-Awesome": "^5.0.8",
     "jQuery": "^3.3.1",
