--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
         "jquery": "^3.3.1",
+        "laravel-elixir-vue-2": "^0.3.0",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
@@ -21,6 +22,7 @@
     "dependencies": {
         "bootstrap": "^3.3.7",
         "font-awesome": "^4.7.0",
-        "jvectormap": "^1.2.2"
+        "jvectormap": "^1.2.2",
+        "vue-resource": "^1.5.0"
     }
 }
