--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "bootstrap": "^3.3.7",
         "font-awesome": "^4.7.0",
         "jvectormap": "^1.2.2",
+        "laravel-vue-pagination": "^1.2.0",
         "vue-resource": "^1.5.0"
     }
 }
