--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "font-awesome": "^4.7.0",
         "jvectormap": "^1.2.2",
         "laravel-vue-pagination": "^1.2.0",
+        "vee-validate": "^2.0.6",
         "vue-resource": "^1.5.0"
     }
 }
