--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-/public/js/
+/public/js/admins
 /public/css/
 /public/images
 /node_module
@@ -22,4 +22,3 @@ yarn-error.log
 package-lock.json
 /public/library
 /resources/assets
-
