--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
-/public/js/admins
+/public/js/
 /public/css/
 /public/images
 /node_module
@@ -21,4 +21,3 @@ yarn-error.log
 /.framgia-ci-reports
 package-lock.json
 /public/library
-/resources/assets
