--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "yajra/laravel-datatables-oracle": "^8.4"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
